--- a/pipeline_config_copy.yml
+++ b/pipeline_config_copy.yml
@@ -6,7 +6,7 @@ nodes:
 - dabble.bbox_to_btm_midpoint
 - dabble.zone_count:
     resolution: [848, 480]
-    zones: [[[0.0, 0.0], [1.0, 0.0], [1.0, 0.5], [0.0, 0.5]], [[0.0, 0.5], [1.0, 0.5], [1.0, 1.0], [0.0, 1.0]]]
+    zones: [[[0,0], [0.5, 0], [0.5, 1], [0, 1]], [[0.5, 0], [1, 0], [1, 1], [0.5, 1]]]
 - draw.bbox
 - draw.btm_midpoint
 - draw.zones
