--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -6,11 +6,13 @@ nodes:
 - custom_nodes.dabble.bbox_to_mid_midpoint
 - dabble.zone_count:
     resolution: [640, 352]
-    zones: [[[0.0, 0.0], [0.5, 0.0], [0.5, 1.0], [0.0, 1.0]], [[0.5, 0.0], [1.0, 0.0], [1.0, 1.0], [0.5, 1.0]]]
+    zones: [[[0.0, 0.0], [0.333, 0.0], [0.333, 0.333], [0.0, 0.333]], [[0.0, 0.333], [0.333, 0.333], [0.333, 0.666], [0.0, 0.666]], [[0.0, 0.666], [0.333, 0.666], [0.333, 0.9990000000000001], [0.0, 0.9990000000000001]], [[0.333, 0.0], [0.666, 0.0], [0.666, 0.333], [0.333, 0.333]], [[0.333, 0.333], [0.666, 0.333], [0.666, 0.666], [0.333, 0.666]], [[0.333, 0.666], [0.666, 0.666], [0.666, 0.9990000000000001], [0.333, 0.9990000000000001]], [[0.666, 0.0], [0.9990000000000001, 0.0], [0.9990000000000001, 0.333], [0.666, 0.333]], [[0.666, 0.333], [0.9990000000000001, 0.333], [0.9990000000000001, 0.666], [0.666, 0.666]], [[0.666, 0.666], [0.9990000000000001, 0.666], [0.9990000000000001, 0.9990000000000001], [0.666, 0.9990000000000001]]]
 - draw.bbox
 - draw.btm_midpoint
 - draw.zones
 - draw.legend:
     show: ["zone_count"]
-- custom_nodes.draw.img_tint_test
+- custom_nodes.draw.img_tint_test:
+    rows: 3
+    columns: 3
 - output.screen
