--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -6,13 +6,15 @@ nodes:
 - custom_nodes.dabble.bbox_to_mid_midpoint
 - dabble.zone_count:
     resolution: [640, 352]
-    zones: [[[0.0, 0.0], [0.333, 0.0], [0.333, 0.333], [0.0, 0.333]], [[0.0, 0.333], [0.333, 0.333], [0.333, 0.666], [0.0, 0.666]], [[0.0, 0.666], [0.333, 0.666], [0.333, 0.9990000000000001], [0.0, 0.9990000000000001]], [[0.333, 0.0], [0.666, 0.0], [0.666, 0.333], [0.333, 0.333]], [[0.333, 0.333], [0.666, 0.333], [0.666, 0.666], [0.333, 0.666]], [[0.333, 0.666], [0.666, 0.666], [0.666, 0.9990000000000001], [0.333, 0.9990000000000001]], [[0.666, 0.0], [0.9990000000000001, 0.0], [0.9990000000000001, 0.333], [0.666, 0.333]], [[0.666, 0.333], [0.9990000000000001, 0.333], [0.9990000000000001, 0.666], [0.666, 0.666]], [[0.666, 0.666], [0.9990000000000001, 0.666], [0.9990000000000001, 0.9990000000000001], [0.666, 0.9990000000000001]]]
+    zones: [[[0.0, 0.0], [0.5, 0.0], [0.5, 0.5], [0.0, 0.5]], [[0.0, 0.5], [0.5, 0.5], [0.5, 1.0], [0.0, 1.0]], [[0.5, 0.0], [1.0, 0.0], [1.0, 0.5], [0.5, 0.5]], [[0.5, 0.5], [1.0, 0.5], [1.0, 1.0], [0.5, 1.0]]]
+- custom_nodes.draw.img_tint_test:
+    rows: 2
+    columns: 2
 - draw.bbox
 - draw.btm_midpoint
 - draw.zones
 - draw.legend:
-    show: ["zone_count"]
-- custom_nodes.draw.img_tint_test:
-    rows: 3
-    columns: 3
+    show : ["zone_count"]
 - output.screen
+- output.media_writer:
+    output_dir : output/
