--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -1,15 +1,15 @@
 nodes:
 - input.visual:
-    source: 0
+    source: raws/candidate_5_2.mp4
 - model.yolo:
     detect: ["person"]
 - custom_nodes.dabble.bbox_to_mid_midpoint
 - dabble.zone_count:
-    resolution: [1280, 720]
-    zones: [[[0.0, 0.0], [0.5, 0.0], [0.5, 1.0], [0.0, 1.0]], [[0.5, 0.0], [1.0, 0.0], [1.0, 1.0], [0.5, 1.0]]]
+    resolution: [848, 480]
+    zones: [[[0.0, 0.333], [1.0, 0.333], [1.0, 0.666], [0.0, 0.666]], [[0.0, 0.666], [1.0, 0.666], [1.0, 0.9990000000000001], [0.0, 0.9990000000000001]]]
 - custom_nodes.draw.img_tint_test:
-    rows: 1
-    columns: 2
+    rows: 3
+    columns: 1
 - draw.bbox
 - draw.btm_midpoint
 - draw.zones
